<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="NuevoServicioViewModel"
            type="com.example.manicura.ui.nuevoServicio.NuevoServicioViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ib_Atras"
                    style="@style/Widget.MaterialComponents.MaterialCalendar.HeaderToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/btn_Atras"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

                <TextView
                    android:id="@+id/tv_TituloNuevoServicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/titulo_NuevoServicio"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ib_Atras"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <AutoCompleteTextView
            android:id="@+id/actv_NombreCliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/alegreya_sans_sc"
            android:hint="@string/hint_NombredeCliente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_AgregarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_add_white_24dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:backgroundTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintStart_toEndOf="@+id/actv_NombreCliente"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:srcCompat="@drawable/ic_add_white_24dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_Pies"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/alegreya_sans_sc"
            android:text="@string/chip_Pies"
            android:onClick="@{() -> NuevoServicioViewModel.clickChipPies()}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chip_Manos"
            app:layout_constraintTop_toBottomOf="@+id/actv_NombreCliente" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_Manos"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:checkable="false"
            android:fontFamily="@font/alegreya_sans_sc"
            android:text="@string/chip_Manos"
            android:onClick="@{() -> NuevoServicioViewModel.clickChipManos()}"
            android:textAlignment="center"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toStartOf="@+id/chip_Pies"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actv_NombreCliente" />

        <EditText
            android:id="@+id/et_Cobro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/alegreya_sans_sc"
            android:hint="@string/hint_MontoACobrar"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_Manos" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_AgregarServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/et_Cobro"
            app:layout_constraintTop_toBottomOf="@+id/chip_Pies"
            app:srcCompat="@drawable/ic_add_shopping_cart_24dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/titulo_UltimasVisitas"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/alegreya_sans_sc"
            app:layout_constraintTop_toBottomOf="@+id/et_Cobro" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:itemCount="3"
            tools:listitem="@layout/lista_servicios" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>